# fitness-assistant-mcp

./: .env  Dockerfile  README.md  docker-compose.yml  dockerfile  init.sql  pyproject.toml  requirements.txt  run_server.py  setup_hybrid.py
config/: claude_desktop_config.json
migrations/versions/: add_gender_001.py
src/fitness_assistant/: server.py
src/fitness_assistant/config/: settings.py
src/fitness_assistant/core/: database.py
src/fitness_assistant/data/: dataset_importer.py
src/fitness_assistant/database/: connection.py  models.py  repositories.py
src/fitness_assistant/database/repositories/: __init__.py  base.py  exercise_repo.py  user_repo.py
src/fitness_assistant/models/: exercise.py  user.py
src/fitness_assistant/tools/: analytics_manager.py  exercise_manager.py  heart_rate_calculator.py  heart_rate_manager.py  profile_manager.py  profile_tools.py  simulation_tools.py  user_listing.py
src/fitness_assistant/utils/: __init__.py  calculations.py  safety.py  validators.py
src/scripts/: setup.py  setup_postgres.py
